Remove the base classes used for LogicalPlan
`ZeroInputPlan`, `OneInputPlan` and `TwoInputPlan` became mostly useless
with the migration from `tryOptimize` to the new rule based framework
which introduced `sources()` and `replaceSources()`. So this commit
removes them.

This also removes `LogicalPlanBase`, mostly because it led to some
questionable `outputs` initializations (`super(lhs, rhs, new
ArrayList<>());`) and didn't have a concrete purpose.

It also makes it more visible that many `estimatedRowSize`
implementations are rather bad.

We'd probably be better off introducing something like a
`ForwardingLogicalPlan` as many operators delegate most method calls to
a source. Its purpose would be clearer.